# ratelimiter/docs/swagger.json
@@ -9,8 +9,8 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/ratelimit/status": {
-            "post": {
+        "/api/v1/ratelimit/{entity_type}/{entity_id}/status": {
+            "get": {
                 "description": "Returns the current rate limit status for the specified entity.",
                 "consumes": [
                     "application/json"
@@ -24,13 +24,18 @@
                 "summary": "Show rate limit status",
                 "parameters": [
                     {
-                        "description": "Rate limit request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schemas.RateLimitRequest"
-                        }
+                        "type": "string",
+                        "description": "Entity type",
+                        "name": "entity_type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Entity ID",
+                        "name": "entity_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -62,17 +67,6 @@
         }
     },
     "definitions": {
-        "schemas.RateLimitRequest": {
-            "type": "object",
-            "properties": {
-                "entity_id": {
-                    "type": "string"
-                },
-                "entity_type": {
-                    "type": "string"
-                }
-            }
-        },
         "schemas.RateLimitResponse": {
             "type": "object",
             "properties": {
